--- a/.gitignore
+++ b/.gitignore
@@ -250,7 +250,7 @@ fabric.properties
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
 # .idea/modules.xml
-# .idea/*.iml
+.idea/*.iml
 # .idea/modules
 
 # CMake
