Remove autocompletes and gitignore to public assets

--- a/.gitignore
+++ b/.gitignore
@@ -305,3 +305,8 @@ modules.xml
 # Sonarlint plugin
 .idea/sonarlint
 coverage
+
+# Ignore precompiled javascript packs
+/public/packs
+/public/packs-test
+/public/assets
