--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,30 @@
+image: "ruby:2.5.5"
+
+services:
+  - postgres:latest
+
 cache:
   paths:
-    - vendor/bundle
+    - vendor/bundle/
+
+variables:
+  POSTGRES_DB: test_db
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
+  DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
 
 before_script:
-  - bundle install --path vendor/bundle
+  - apt-get update -qq && apt-get install -y -qq postgresql postgresql-contrib libpq-dev cmake git
+  - ruby -v
+  - which ruby
+  - RAILS_ENV=test bundle install --jobs $(nproc) "${FLAGS[@]}" --path vendor/bundle/
+  - ls -lah vendor
+  - cp config/database.yml.gitlab config/database.yml
+  - RAILS_ENV=test bundle exec rake db:create db:schema:load
 
-pages:
+rspec:
   script:
-    - ls
-  artifacts:
-    paths:
-      - public
+    - RAILS_ENV=test bundle exec rspec
   only:
     - master
+    - stable
