--- a/.erdconfig
+++ b/.erdconfig
@@ -9,7 +9,7 @@ indirect: true
 inheritance: false
 markup: true
 notation: simple
-orientation: horizontal
+orientation: vertical
 polymorphism: false
 sort: true
 warn: true
