--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,19 @@
+services:
+  - postgresql
+
+addons:
+  postgresql: '9.6'
+
+before_script:
+  - cp config/database.yml.travis config/database.yml
+
 language: ruby
+
 rvm:
-- 2.5.5
+  - 2.5.5
 
 script:
- - bundle install — jobs=3 — retry=3
- - bundle exec rake db:create
- - bundle exec rake db:migrate
- - bundle exec rspec
+  - psql -c 'create database test_db;' -U postgres
+  - bundle install — jobs=3 — retry=3
+  - bundle exec rails db:reset db:setup db:migrate RAILS_ENV=test
+  - bundle exec rspec
