--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,12 @@ services:
     ports:
       - '5432:5432'
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres}"]
+      test: ['CMD-SHELL', 'pg_isready -U ${DB_USER:-postgres}']
       timeout: 45s
       interval: 10s
       retries: 10
-    env_file: 
-      - ./.env
+    env_file:
+      - ./ltr.env
   web:
     container_name: life-to-remind
     build: .
@@ -29,5 +29,5 @@ services:
       db_ltr:
         condition: service_healthy
     restart: on-failure
-    env_file: 
-      - ./.env
+    env_file:
+      - ./ltr.env
