Update docker files

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ config/master.key
 /.bundle
 /vendor/bundle
 
+*/tmp/**
+
 # these should all be checked in to normalize the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
 
