--- a/config/database.yml
+++ b/config/database.yml
@@ -2,18 +2,20 @@ default: &default
   adapter: postgresql
   encoding: unicode
   timeout: 5000
-  port: 5432
-  database: ltr
+  port: <%= ENV.fetch("DB_PORT") { 5432 } %>
   host: <%= ENV.fetch("DB_HOST") { localhost } %>
-  username: <%= ENV.fetch("DB_USER") { postgres } %>
-  password: <%= ENV.fetch("LTR_DATABASE_PASSWORD") { postgres } %>
+  username: postgres
+  password: <%= ENV.fetch("DB_PASSWORD") { postgres } %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
+  database: ltr_development
 
 test:
   <<: *default
+  database: ltr_test
 
 production:
   <<: *default
+  database: ltr_production
