--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,18 +8,18 @@ services:
     ports:
       - '5432:5432'
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U ${DB_USER:-postgres}']
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
       timeout: 45s
       interval: 10s
       retries: 10
     env_file:
-      - ./ltr.env
+      - ./env_file.env
   web:
     container_name: life-to-remind
     build: .
     command: >
-      bash -c "bundle exec rails db:reset db:setup db:migrate RAILS_ENV=${RAILS_ENV:-development}
-      && rm -f tmp/pids/server.pid
+      bash -c "rm -f tmp/pids/server.pid
+      && rake db:create db:setup
       && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/LifeToRemind
@@ -28,6 +28,6 @@ services:
     depends_on:
       db_ltr:
         condition: service_healthy
-    restart: on-failure
+    #restart: on-failure
     env_file:
-      - ./ltr.env
+      - ./env_file.env
