--- a/config/database.yml
+++ b/config/database.yml
@@ -2,11 +2,11 @@ default: &default
   adapter: postgresql
   encoding: unicode
   timeout: 5000
-  port: <%= ENV.fetch("DB_PORT") { 5432 } %>
-  host: <%= ENV.fetch("DB_HOST") { localhost } %>
+  port: 5432
+  host: <%= ENV.fetch("DB_HOST") || localhost %>
   username: postgres
-  password: <%= ENV.fetch("DB_PASSWORD") { postgres } %>
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  password: <%= ENV.fetch("DB_PASSWORD") || postgres %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") || 5 %>
 
 development:
   <<: *default
